<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    android:background="#F8A4A4"
    tools:context=".starting_screen">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="281dp"
        android:layout_height="272dp"
       android:layout_marginStart="50sp"
        android:contentDescription="@string/image_view_description"
        android:src="@drawable/like" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="40sp"
        android:background="#C5E8F8"
        android:text="@string/learn_table"
        android:textSize="45sp"
        android:textStyle="italic" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_below="@id/btn1"
        android:layout_marginTop="15sp"
        android:background="#C5E8F8"
        android:text="@string/practice"
        android:textSize="45sp"
        android:textStyle="italic" />

</LinearLayout>
