<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10sp"
    android:background="#F8A4A4"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="134dp"
        android:layout_height="133dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/image_view_description"
        android:src="@drawable/like" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="cursive"
        android:text="Practice"
        android:textColor="#5B84BB"
        android:textSize="70sp"
        android:textStyle="bold"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/text"
        android:layout_width="150sp"
        android:layout_height="35sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:hint="@string/enter_number"
        android:inputType="number"
        android:gravity="center"/>

    <Button
        android:id="@+id/button"
        android:layout_width="120sp"
        android:layout_height="35sp"
        android:layout_marginTop="20dp"
        android:background="#C5D6F3"
        android:fontFamily="cursive"
        android:text="@string/start"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <ListView
        android:id="@+id/list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:layout_marginTop="20dp"/>

</LinearLayout>
